--- a/src/main/resources/templates/send.html
+++ b/src/main/resources/templates/send.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/template.html}">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Contact Us</title>
 </head>
 <body>
-<h1> email success</h1>
+<div layout:fragment="content">
+    <h2 style="margin-top: 40px; text-align: center">Contact Us</h2>
+    <p style="margin-top: 40px;margin-bottom: 40px; text-align: center"> Thank you for contacting us. We'll get back to you shortly</p>
+</div>
 </body>
 </html>
