--- a/src/main/resources/templates/help.html
+++ b/src/main/resources/templates/help.html
@@ -275,33 +275,38 @@
                             <h2 class="title mb-1">Got Any Questions?</h2><!-- End .title mb-2 -->
                             <p class="mb-2">Use the form below to get in touch with the sales team</p>
 
-                            <form action="#" class="contact-form mb-3">
+                            <form action="/sendmail" method="post" class="contact-form mb-3">
                                 <div class="row">
-                                    <div class="col-sm-6">
-                                        <label for="cname" class="sr-only">Name</label>
-                                        <input type="text" class="form-control" id="cname" placeholder="Name *" required>
-                                    </div><!-- End .col-sm-6 -->
 
                                     <div class="col-sm-6">
-                                        <label for="cemail" class="sr-only">Email</label>
-                                        <input type="email" class="form-control" id="cemail" placeholder="Email *" required>
+                                        <label for="subject" class="sr-only">Subject</label>
+                                        <input type="text" class="form-control" name="subject" placeholder="Subject" required></input>
+                                    </div>
+
+                                    <div class="col-sm-6">
+                                        <label for="name" class="sr-only">Name</label>
+                                        <input type="text" class="form-control" name="name" placeholder="Name" >
                                     </div><!-- End .col-sm-6 -->
+
+
+                                    <!-- End .col-sm-6 -->
                                 </div><!-- End .row -->
 
                                 <div class="row">
                                     <div class="col-sm-6">
-                                        <label for="cphone" class="sr-only">Phone</label>
-                                        <input type="tel" class="form-control" id="cphone" placeholder="Phone">
+                                        <label for="phone" class="sr-only">Phone</label>
+                                        <input type="tel" class="form-control" name="phone" placeholder="Phone"></input>
                                     </div><!-- End .col-sm-6 -->
 
                                     <div class="col-sm-6">
-                                        <label for="csubject" class="sr-only">Subject</label>
-                                        <input type="text" class="form-control" id="csubject" placeholder="Subject">
-                                    </div><!-- End .col-sm-6 -->
+                                        <label for="email" class="sr-only">Email</label>
+                                        <input type="email" class="form-control" name="email" placeholder="Email *" required>
+                                    </div>
+                                    <!-- End .col-sm-6 -->
                                 </div><!-- End .row -->
 
-                                <label for="cmessage" class="sr-only">Message</label>
-                                <textarea class="form-control" cols="30" rows="4" id="cmessage" required placeholder="Message *"></textarea>
+                                <label for="message" class="sr-only">Message</label>
+                                <textarea class="form-control" cols="30" rows="4" name="message" required placeholder="Message *"></textarea>
 
                                 <button type="submit" class="btn btn-outline-primary-2 btn-minwidth-sm">
                                     <span>SUBMIT</span>
