--- a/src/main/resources/templates/create_product.html
+++ b/src/main/resources/templates/create_product.html
@@ -13,7 +13,7 @@
 <main class="main" layout:fragment="content">
     <div class="form_wrapperss" style="margin-top: 20px; padding-bottom: 20px">
         <h1>Create Product</h1>
-        <form class="form_img" action="/createproduct" method="post" id="form_img" th:object="${productDto}" enctype="multipart/form-data">
+        <form class="form_img" th:action="@{/createproduct}" method="post" id="form_img" th:object="${productDto}" enctype="multipart/form-data">
             <input type="hidden" name="id" th:field="${productDto.productid}">
             <div class="name_product" style="width: 600px;float: left;margin: 0 0 20px 200px">
                 <label for="namep">Product Name</label>
@@ -48,7 +48,7 @@
             <div class="select-custom">
                 <label for="category">Category</label>
                 <select class="form-control" aria-label="category" id="category" name="category" >
-                    <option th:value="${item.categoryid}" th:text="${item.name}" th:each="item:${category}"></option>
+                    <option th:each="item:${category}" th:value="${item.categoryid}" th:text="${item.name}" ></option>
                 </select>
             </div>
             <div class="d-flex justify-content-center">
