--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -95,6 +95,7 @@
 
                             <div class="products mb-3">
                                 <div class="row justify-content-center">
+                                    <form method="POST" action="/addcart">
                                     <div class="col-6 col-md-4 col-lg-4 col-xl-3" th:each="product : ${products}">
                                         <div class="product product-7 text-center">
                                             <figure class="product-media">
@@ -110,7 +111,7 @@
                                                 </div><!-- End .product-action-vertical -->
 
                                                 <div class="product-action">
-                                                    <a href="#" class="btn-product btn-cart"><span>add to cart</span></a>
+                                                    <button type="submit" class="btn-product btn-cart" ><span>add to cart</span></button>
                                                 </div><!-- End .product-action -->
                                             </figure><!-- End .product-media -->
 
@@ -131,7 +132,7 @@
                                             </div><!-- End .product-body -->
                                         </div><!-- End .product -->
                                     </div><!-- End .col-sm-6 col-lg-4 col-xl-3 -->
-
+                                    </form>
 
                                 </div><!-- End .row -->
                             </div><!-- End .products -->
