--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -25,6 +25,7 @@
         </nav><!-- End .breadcrumb-nav -->
 
         <div class="page-content">
+            <form method="POST" >
             <div class="cart">
                 <div class="container">
                     <div class="row">
@@ -41,59 +42,33 @@
                                 </thead>
 
                                 <tbody th:each="item : ${cartItem}">
-                                <tr>
-                                    <td class="product-col">
-                                        <div class="product">
-                                            <figure class="product-media">
-                                                <a href="#">
-                                                    <img src="images/index/products/product-3.jpg"
-                                                         alt="Product image">
-                                                </a>
-                                            </figure>
+                                    <tr>
+                                        <td class="product-col">
+                                            <div class="product">
+                                                <figure class="product-media">
+                                                    <a href="#">
+                                                        <img src="images/index/products/product-2.jpg"
+                                                             alt="Product image">
+                                                    </a>
+                                                </figure>
 
-                                            <h3 class="product-title">
-                                                <a href="#" th:text="${item.product.name}">Beige knitted elastic runner shoes</a>
-                                                <span th:text="${item.user.address}">Address seller:So 8,Ton That Thuyet, Ha Noi</span>
-                                            </h3><!-- End .product-title -->
-                                        </div><!-- End .product -->
-                                    </td>
-                                    <td class="price-col" th:text="${item.product.price}">84.00</td>
-                                    <td class="quantity-col">
-                                        <div class="cart-product-quantity">
-                                            <input type="number" class="form-control" value="1" min="1" max="10" step="1" data-decimals="0" required th:value="${item.quantity}">
-                                        </div><!-- End .cart-product-quantity -->
-                                    </td>
-                                    <td class="total-col">$84.00</td>
-                                    <td class="remove-col">
-                                        <button class="btn-remove"><i class="las la-times"></i></button>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="product-col">
-                                        <div class="product">
-                                            <figure class="product-media">
-                                                <a href="#">
-                                                    <img src="images/index/products/product-3.jpg"
-                                                         alt="Product image">
-                                                </a>
-                                            </figure>
-
-                                            <h3 class="product-title">
-                                                <a href="#">Blue utility pinafore denim dress</a>
-                                            </h3><!-- End .product-title -->
-                                        </div><!-- End .product -->
-                                    </td>
-                                    <td class="price-col" value="76" id="price-item">76.00</td>
-                                    <td class="quantity-col">
-                                        <div class="cart-product-quantity">
-                                            <input id = "changedinput"   type="number" class="form-control" value="1" min="1" max="10" step="1" data-decimals="0" required>
-                                        </div><!-- End .cart-product-quantity -->
-                                    </td>
-                                    <td class="total-col">76.00</td>
-                                    <td class="remove-col">
-                                        <button class="btn-remove"><i class="las la-times"></i></button>
-                                    </td>
-                                </tr>
+                                                <h3 class="product-title">
+                                                    <a href="#" th:text="${item.product.name}">Beige knitted elastic runner shoes</a>
+                                                    <span th:text="${item.user.address}">Address seller:So 8,Ton That Thuyet, Ha Noi</span>
+                                                </h3><!-- End .product-title -->
+                                            </div><!-- End .product -->
+                                        </td>
+                                        <td class="price-col" th:text="${item.product.price}">84.00</td>
+                                        <td class="quantity-col">
+                                            <div class="cart-product-quantity">
+                                                <input type="number" class="form-control" value="1" min="1" max="10" step="1" data-decimals="0" required th:value="${item.quantity}">
+                                            </div><!-- End .cart-product-quantity -->
+                                        </td>
+                                        <td class="total-col">$84.00</td>
+                                        <td class="remove-col">
+                                            <button class="btn-remove"><i class="las la-times"></i></button>
+                                        </td>
+                                    </tr>
                                 </tbody>
                             </table><!-- End .table table-wishlist -->
 
@@ -109,9 +84,8 @@
                                         </div><!-- End .input-group -->
                                     </form>
                                 </div><!-- End .cart-discount -->
-
-                                <a href="#" class="btn btn-outline-dark-2 update-cart"><span>UPDATE CART</span><i
-                                        class="icon-refresh"></i></a>
+                                <button type="submit" class="btn btn-outline-dark-2 update-cart"><span>UPDATE CART</span><i>
+                                        class="icon-refresh"></i></button>
                             </div><!-- End .cart-bottom -->
                         </div><!-- End .col-lg-9 -->
                         <aside class="col-lg-3">
@@ -188,6 +162,7 @@
                     </div><!-- End .row -->
                 </div><!-- End .container -->
             </div><!-- End .cart -->
+            </form>
         </div><!-- End .page-content -->
     </main>
 </div>
