--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -84,7 +84,7 @@
                                         </div><!-- End .input-group -->
                                     </form>
                                 </div><!-- End .cart-discount -->
-                                <button type="submit" class="btn btn-outline-dark-2 update-cart"><span>UPDATE CART</span><i>
+                                <button type="submit" class="btn btn-outline-dark-2 update-cart"><span>UPDATE CART</span><i
                                         class="icon-refresh"></i></button>
                             </div><!-- End .cart-bottom -->
                         </div><!-- End .col-lg-9 -->
