--- a/src/main/resources/templates/layout/adminlayout/sidebar.html
+++ b/src/main/resources/templates/layout/adminlayout/sidebar.html
@@ -12,8 +12,8 @@
 
       Tip 2: you can also add an image using data-image tag
   -->
-    <div class="logo"><a href="http://www.creative-tim.com" class="simple-text logo-normal">
-        Creative Tim
+    <div class="logo"><a href="/adminIndex" class="simple-text logo-normal">
+        LPD Store
     </a></div>
     <div class="sidebar-wrapper">
         <ul class="nav">
