--- a/src/main/resources/templates/create_product.html
+++ b/src/main/resources/templates/create_product.html
@@ -47,8 +47,8 @@
             </div>
             <div class="select-custom">
                 <label for="category">Category</label>
-                <select class="form-control" aria-label="category" id="category" name="category" >
-                    <option th:value="${item.categoryid}" th:text="${item.name}" th:each="item:${category}"></option>
+                <select class="form-control" aria-label="category" id="category" name="categoryid" >
+                    <option th:each="item:${category}" th:value="${item.categoryid}" th:text="${item.name}" ></option>
                 </select>
             </div>
             <div class="d-flex justify-content-center">
