--- a/src/main/resources/templates/create_product.html
+++ b/src/main/resources/templates/create_product.html
@@ -48,7 +48,7 @@
             <div class="select-custom">
                 <label for="category">Category</label>
                 <select class="form-control" aria-label="category" id="category" name="categoryid" >
-                    <option th:each="item:${category}" th:value="${item.categoryid}" th:text="${item.name}" ></option>
+                    <option th:each="item:${category}" th:text="${item.getName()}" th:value="${item.getCategoryid()}" ></option>
                 </select>
             </div>
             <div class="d-flex justify-content-center">
