--- a/src/main/resources/templates/layout/adminlayout/sidebar.html
+++ b/src/main/resources/templates/layout/adminlayout/sidebar.html
@@ -30,13 +30,13 @@
                 </a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link" href="./tables.html">
+                <a class="nav-link" th:href="@{/listproduct}">
                     <i class="material-icons">inventory_2</i>
                     <p>Product</p>
                 </a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link" href="/listRole">
+                <a class="nav-link" th:href="@{/listnew}">
                     <i class="material-icons">library_books</i>
                     <p>News</p>
                 </a>
