--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -51,7 +51,7 @@
                                                              alt="Product image">
                                                     </a>
                                                 </figure>
-
+    
                                                 <h3 class="product-title">
                                                     <a href="#" th:text="${item.product.name}">Beige knitted elastic runner shoes</a>
                                                     <span th:text="${item.user.address}">Address seller:So 8,Ton That Thuyet, Ha Noi</span>
@@ -65,8 +65,8 @@
                                             </div><!-- End .cart-product-quantity -->
                                         </td>
                                         <td class="total-col">$84.00</td>
-                                        <td class="remove-col">
-                                            <button class="btn-remove"><i class="las la-times"></i></button>
+                                        <td class="remove-col" >
+                                                <a th:href="@{/removecart(id=${item.product.productid})}" class="btn-remove"><i class="las la-times"></i></a>
                                         </td>
                                     </tr>
                                 </tbody>
