--- a/src/main/resources/templates/create_product.html
+++ b/src/main/resources/templates/create_product.html
@@ -46,9 +46,12 @@
                 </div>
             </div>
             <div class="select-custom">
-                <label for="category">Category</label>
-                <select class="form-control" aria-label="category" id="category" name="categoryid" >
-                    <option th:each="item:${category}" th:text="${item.getName()}" th:value="${item.getCategoryid()}" ></option>
+                <label for="categoryid">Category</label>
+                <select class="form-control" aria-label="category" id="categoryid" name="categoryid" >
+                    <option th:each="item:${category}"
+                            th:text="${item.name}"
+                            th:value="${item.categoryid}"
+                    ></option>
                 </select>
             </div>
             <div class="d-flex justify-content-center">
