--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -64,7 +64,7 @@
                                                 <input type="number" class="form-control" value="1" min="1" max="10" step="1" data-decimals="0" required th:value="${item.quantity}">
                                             </div><!-- End .cart-product-quantity -->
                                         </td>
-                                        <td class="total-col">$84.00</td>
+                                        <td class="total-col productSubtotal" th:text="${item.subtotal}">$84.00</td>
                                         <td class="remove-col" >
                                                 <a th:href="@{/removecart(id=${item.product.productid})}" class="btn-remove"><i class="las la-times"></i></a>
                                         </td>
@@ -147,7 +147,7 @@
 
                                     <tr class="summary-total">
                                         <td>Total:</td>
-                                        <td>$160.00</td>
+                                        <td id="totalAmount">$100.00</td>
                                     </tr><!-- End .summary-total -->
                                     </tbody>
                                 </table><!-- End .table table-summary -->
@@ -166,5 +166,7 @@
         </div><!-- End .page-content -->
     </main>
 </div>
+
 </body>
+
 </html>
