--- a/src/main/resources/templates/detailproduct.html
+++ b/src/main/resources/templates/detailproduct.html
@@ -108,7 +108,7 @@
                                 <div class="details-action-col">
                                     <div class="product-details-quantity">
                                         <input type="number" id="qty" class="form-control" value="1" min="1" max="10"
-                                               step="1" data-decimals="0"
+                                               step="1" data-decimals="0" name="qty"
                                                required="" style="display: none;">
                                     </div><!-- End .product-details-quantity -->
                                     <input type="hidden" name ="pid" id="pid" th:value ="${product.productid}">
