--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -47,7 +47,7 @@
                                             <div class="product">
                                                 <figure class="product-media">
                                                     <a href="#">
-                                                        <img src="images/index/products/product-2.jpg"
+                                                        <img th:src="@{${'/images/' + item.product.image}}"
                                                              alt="Product image">
                                                     </a>
                                                 </figure>
@@ -61,7 +61,8 @@
                                         <td class="price-col" th:text="${item.product.price}">84.00</td>
                                         <td class="quantity-col">
                                             <div class="cart-product-quantity">
-                                                <input type="number" class="form-control" value="1" min="1" max="10" step="1" data-decimals="0" required th:value="${item.quantity}">
+                                                <input type="number" name="qty" class="form-control" th:min="1" th:max="10" step="1"
+                                                       data-decimals="0" required th:value="${item.quantity}">
                                             </div><!-- End .cart-product-quantity -->
                                         </td>
                                         <td class="total-col productSubtotal" th:text="${item.subtotal}">$84.00</td>
