--- a/src/main/resources/templates/detailproduct.html
+++ b/src/main/resources/templates/detailproduct.html
@@ -107,7 +107,7 @@
                             <div class="product-details-action">
                                 <div class="details-action-col">
                                     <div class="product-details-quantity">
-                                        <input type="number" id="qty" class="form-control" value="1" min="1" max="10"
+                                        <input type="number" name="qty" th:id="'qty'+${product.productid}" class="form-control" value="1"  th:min="1" th:max="10"
                                                step="1" data-decimals="0"
                                                required="" style="display: none;">
                                     </div><!-- End .product-details-quantity -->
