--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -47,11 +47,11 @@
                                             <div class="product">
                                                 <figure class="product-media">
                                                     <a href="#">
-                                                        <img src="images/index/products/product-2.jpg"
+                                                        <img th:src="@{${'/images/' + item.product.image}}"
                                                              alt="Product image">
                                                     </a>
                                                 </figure>
-    
+
                                                 <h3 class="product-title">
                                                     <a href="#" th:text="${item.product.name}">Beige knitted elastic runner shoes</a>
                                                     <span th:text="${item.user.address}">Address seller:So 8,Ton That Thuyet, Ha Noi</span>
@@ -61,10 +61,11 @@
                                         <td class="price-col" th:text="${item.product.price}">84.00</td>
                                         <td class="quantity-col">
                                             <div class="cart-product-quantity">
-                                                <input type="number" class="form-control" value="1" min="1" max="10" step="1" data-decimals="0" required th:value="${item.quantity}">
+                                                <input type="number" name="qty" class="form-control" th:min="1" th:max="10" step="1"
+                                                       data-decimals="0" required th:value="${item.quantity}">
                                             </div><!-- End .cart-product-quantity -->
                                         </td>
-                                        <td class="total-col" th:text="${item.subtotal}">$84.00</td>
+                                        <td class="total-col productSubtotal" th:text="${item.subtotal}">$84.00</td>
                                         <td class="remove-col" >
                                                 <a th:href="@{/removecart(id=${item.product.productid})}" class="btn-remove"><i class="las la-times"></i></a>
                                         </td>
@@ -147,7 +148,7 @@
 
                                     <tr class="summary-total">
                                         <td>Total:</td>
-                                        <td>$160.00</td>
+                                        <td id="totalAmount">$160.00</td>
                                     </tr><!-- End .summary-total -->
                                     </tbody>
                                 </table><!-- End .table table-summary -->
