--- a/src/main/resources/templates/pay.html
+++ b/src/main/resources/templates/pay.html
@@ -30,6 +30,7 @@
                     <div class="row">
                         <div class="col-lg-9">
                             <h2 class="checkout-title">Billing Details</h2><!-- End .checkout-title -->
+                            <div class="alert alert-primary" th:text="${error}" th:if="${error}" ></div>
                             <div class="row">
                                 <div class="col-sm-12">
                                     <label>Full Name *</label>
