--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -4,7 +4,7 @@
       layout:decorate="~{layout/template.html}">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Profile</title>
 </head>
 <body>
 <main class="main" layout:fragment="content">
@@ -64,7 +64,42 @@
                             </div><!-- .End .tab-pane -->
 
                             <div class="tab-pane fade" id="tab-downloads" role="tabpanel" aria-labelledby="tab-downloads-link">
-                                <p>No products available yet.</p>
+
+                                <div class="col-lg-12">
+                                    <table class="table table-cart table-mobile">
+                                        <thead>
+                                        <tr>
+                                            <th>Product</th>
+                                            <th>Price</th>
+                                            <th>Quantity</th>
+                                            <th>Total</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        <tr>
+                                            <td class="product-col">
+                                                <div class="product">
+                                                    <figure class="product-media">
+                                                        <a href="#">
+                                                            <img src="images/index/products/product-1.jpg" alt="Product image">
+                                                        </a>
+                                                    </figure>
+
+                                                    <h3 class="product-title">
+                                                        <a href="#">Beige knitted elastic runner shoes</a>
+                                                    </h3><!-- End .product-title -->
+                                                </div><!-- End .product -->
+                                            </td>
+                                            <td class="price-col">$84.00</td>
+                                            <td class="quantity-col">
+                                                <div class="cart-product-quantity">8</div><!-- End .cart-product-quantity -->
+                                            </td>
+                                            <td class="total-col">$84.00</td>
+                                            <td class="remove-col"><button class="btn-remove"><i class="icon-close"></i></button></td>
+                                        </tr>
+                                        </tbody>
+                                    </table><!-- End .table table-wishlist -->
+                                </div>
                                 <a href="/createproduct" class="btn btn-outline-primary-2"><span>Create Product</span><i class="las la-long-arrow-alt-right"></i></a>
                             </div><!-- .End .tab-pane -->
 
