--- a/src/main/resources/templates/Edit_Ship.html
+++ b/src/main/resources/templates/Edit_Ship.html
@@ -27,7 +27,7 @@
                                     <div class="col-md-12">
                                         <div class="form-group">
                                             <label for="name" class="bmd-label-floating">Name</label>
-                                            <input type="text" name="name" th:field="${shipper2.name}" class="form-control">
+                                            <input id="name" type="text" name="name" th:field="${shipper2.name}" class="form-control">
                                         </div>
                                     </div>
                                 </div>
@@ -35,28 +35,9 @@
                                     <div class="col-md-6">
                                         <div class="form-group">
                                             <label for="phone" class="bmd-label-floating">Phone</label>
-                                            <input type="text" name="phone" th:field="${shipper2.phone}" class="form-control"><br/>
+                                            <input id="phone" type="text" name="phone" th:field="${shipper2.phone}" class="form-control"><br/>
                                         </div>
                                     </div>
-                                    <div class="col-md-6">
-                                        <div class="form-group">
-                                            <label for="typeShip" class="bmd-label-floating">Type Ship</label>
-                                            <select id="typeShip" th:field="${shipper2.activateid}" class="selected">
-                                                <option th:each="activate : ${list_type}" th:value="${activate.id}" th:text="${activate.name}"></option>
-                                            </select><br/>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <div class="form-group">
-                                            <label for="active" class="bmd-label-floating">Active</label>
-                                            <select id="active" th:field="${shipper2.activeid}" class="selected">
-                                                <option th:each="active : ${list_active}" th:value="${active.activeid}" th:text="${active.name}"></option>
-                                            </select><br/>
-                                        </div>
-                                    </div>
-                                </div>
 
                                 <button type="submit" class="btn btn-primary pull-right">Create</button>
                                 <div class="clearfix"></div>
