--- a/src/main/resources/templates/layout/adminlayout/sidebar.html
+++ b/src/main/resources/templates/layout/adminlayout/sidebar.html
@@ -42,7 +42,7 @@
                 </a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link" href="./icons.html">
+                <a class="nav-link" href="/Shipper_Admin">
                     <i class="material-icons">local_shipping</i>
                     <p>Shipper</p>
                 </a>
