--- a/src/main/resources/templates/listProductUser.html
+++ b/src/main/resources/templates/listProductUser.html
@@ -12,9 +12,9 @@
                 <div class="card">
                     <div class="card-header card-header-primary">
                         <h4 class="card-title ">Product User </h4>
-                        <p class="card-category"><a href="/createProductUser"> add</p>
                     </div>
                     <div class="card-body">
+                        <a href="/createProductUser" class="btn btn-primary">Create product</a>
                         <div class="table-responsive">
                             <table class="table">
                                 <thead class=" text-primary">
