--- a/src/main/resources/templates/listnew.html
+++ b/src/main/resources/templates/listnew.html
@@ -16,6 +16,7 @@
                             <p class="card-category"> Here are list</p>
                         </div>
                         <div class="card-body">
+                            <a href="/createnew" class="btn btn-primary">Create New</a>
                             <div class="table-responsive">
                                 <table class="table">
                                     <thead class=" text-primary">
