--- a/src/main/resources/templates/pay.html
+++ b/src/main/resources/templates/pay.html
@@ -42,22 +42,18 @@
                             <input type="text" class="form-control" required>
 
                             <label>Address *</label>
-                            <input type="text" class="form-control" placeholder="House number and Street name" required th:name="address">
+                            <input type="text" class="form-control" placeholder="House number and Street name" th:name="address" required >
 
                             <div class="row">
-                                <div class="col-sm-6">
-                                    <label>Currency *</label>
-                                    <input type="text" class="form-control" required name="currency">
-                                </div><!-- End .col-sm-6 -->
 
-                                <div class="col-sm-6">
+                                <div class="col-sm-12">
                                     <label>Phone *</label>
-                                    <input type="tel" class="form-control" required>
+                                    <input type="tel" class="form-control" th:name="phone" required >
                                 </div><!-- End .col-sm-6 -->
                             </div><!-- End .row -->
 
                             <label>Email address *</label>
-                            <input type="email" class="form-control" required>
+                            <input type="email" class="form-control" th:name="email" required >
 
                             <label>Order notes (optional)</label>
                             <textarea class="form-control" cols="30" rows="4" placeholder="Notes about your order, e.g. special notes for delivery" th:name="description"></textarea>
